assignment2a/michel/src/scanparse/y.output
Terminals unused in grammar

   COMMA
   NE


Grammar

    0 $accept: program $end

    1 program: module

    2 module: stmts

    3 stmts: stmt stmts
    4      | stmt

    5 stmt: assign

    6 assign: varlet LET expr SEMICOLON

    7 varlet: ID

    8 expr: constant
    9     | ID
   10     | BRACKET_L expr binop expr BRACKET_R

   11 constant: floatval
   12         | intval
   13         | boolval

   14 floatval: FLOAT

   15 intval: NUM

   16 boolval: TRUEVAL
   17        | FALSEVAL

   18 binop: PLUS
   19      | MINUS
   20      | STAR
   21      | SLASH
   22      | PERCENT
   23      | LE
   24      | LT
   25      | GE
   26      | GT
   27      | EQ
   28      | OR
   29      | AND


Terminals, with rules where they appear

$end (0) 0
error (256)
BRACKET_L (258) 10
BRACKET_R (259) 10
COMMA (260)
SEMICOLON (261) 6
MINUS (262) 19
PLUS (263) 18
STAR (264) 20
SLASH (265) 21
PERCENT (266) 22
LE (267) 23
LT (268) 24
GE (269) 25
GT (270) 26
EQ (271) 27
NE (272)
OR (273) 28
AND (274) 29
TRUEVAL (275) 16
FALSEVAL (276) 17
LET (277) 6
NUM (278) 15
FLOAT (279) 14
ID (280) 7 9


Nonterminals, with rules where they appear

$accept (26)
    on left: 0
program (27)
    on left: 1, on right: 0
module (28)
    on left: 2, on right: 1
stmts (29)
    on left: 3 4, on right: 2 3
stmt (30)
    on left: 5, on right: 3 4
assign (31)
    on left: 6, on right: 5
varlet (32)
    on left: 7, on right: 6
expr (33)
    on left: 8 9 10, on right: 6 10
constant (34)
    on left: 11 12 13, on right: 8
floatval (35)
    on left: 14, on right: 11
intval (36)
    on left: 15, on right: 12
boolval (37)
    on left: 16 17, on right: 13
binop (38)
    on left: 18 19 20 21 22 23 24 25 26 27 28 29, on right: 10


State 0

    0 $accept: . program $end

    ID  shift, and go to state 1

    program  go to state 2
    module   go to state 3
    stmts    go to state 4
    stmt     go to state 5
    assign   go to state 6
    varlet   go to state 7


State 1

    7 varlet: ID .

    $default  reduce using rule 7 (varlet)


State 2

    0 $accept: program . $end

    $end  shift, and go to state 8


State 3

    1 program: module .

    $default  reduce using rule 1 (program)


State 4

    2 module: stmts .

    $default  reduce using rule 2 (module)


State 5

    3 stmts: stmt . stmts
    4      | stmt .

    ID  shift, and go to state 1

    $default  reduce using rule 4 (stmts)

    stmts   go to state 9
    stmt    go to state 5
    assign  go to state 6
    varlet  go to state 7


State 6

    5 stmt: assign .

    $default  reduce using rule 5 (stmt)


State 7

    6 assign: varlet . LET expr SEMICOLON

    LET  shift, and go to state 10


State 8

    0 $accept: program $end .

    $default  accept


State 9

    3 stmts: stmt stmts .

    $default  reduce using rule 3 (stmts)


State 10

    6 assign: varlet LET . expr SEMICOLON

    BRACKET_L  shift, and go to state 11
    TRUEVAL    shift, and go to state 12
    FALSEVAL   shift, and go to state 13
    NUM        shift, and go to state 14
    FLOAT      shift, and go to state 15
    ID         shift, and go to state 16

    expr      go to state 17
    constant  go to state 18
    floatval  go to state 19
    intval    go to state 20
    boolval   go to state 21


State 11

   10 expr: BRACKET_L . expr binop expr BRACKET_R

    BRACKET_L  shift, and go to state 11
    TRUEVAL    shift, and go to state 12
    FALSEVAL   shift, and go to state 13
    NUM        shift, and go to state 14
    FLOAT      shift, and go to state 15
    ID         shift, and go to state 16

    expr      go to state 22
    constant  go to state 18
    floatval  go to state 19
    intval    go to state 20
    boolval   go to state 21


State 12

   16 boolval: TRUEVAL .

    $default  reduce using rule 16 (boolval)


State 13

   17 boolval: FALSEVAL .

    $default  reduce using rule 17 (boolval)


State 14

   15 intval: NUM .

    $default  reduce using rule 15 (intval)


State 15

   14 floatval: FLOAT .

    $default  reduce using rule 14 (floatval)


State 16

    9 expr: ID .

    $default  reduce using rule 9 (expr)


State 17

    6 assign: varlet LET expr . SEMICOLON

    SEMICOLON  shift, and go to state 23


State 18

    8 expr: constant .

    $default  reduce using rule 8 (expr)


State 19

   11 constant: floatval .

    $default  reduce using rule 11 (constant)


State 20

   12 constant: intval .

    $default  reduce using rule 12 (constant)


State 21

   13 constant: boolval .

    $default  reduce using rule 13 (constant)


State 22

   10 expr: BRACKET_L expr . binop expr BRACKET_R

    MINUS    shift, and go to state 24
    PLUS     shift, and go to state 25
    STAR     shift, and go to state 26
    SLASH    shift, and go to state 27
    PERCENT  shift, and go to state 28
    LE       shift, and go to state 29
    LT       shift, and go to state 30
    GE       shift, and go to state 31
    GT       shift, and go to state 32
    EQ       shift, and go to state 33
    OR       shift, and go to state 34
    AND      shift, and go to state 35

    binop  go to state 36


State 23

    6 assign: varlet LET expr SEMICOLON .

    $default  reduce using rule 6 (assign)


State 24

   19 binop: MINUS .

    $default  reduce using rule 19 (binop)


State 25

   18 binop: PLUS .

    $default  reduce using rule 18 (binop)


State 26

   20 binop: STAR .

    $default  reduce using rule 20 (binop)


State 27

   21 binop: SLASH .

    $default  reduce using rule 21 (binop)


State 28

   22 binop: PERCENT .

    $default  reduce using rule 22 (binop)


State 29

   23 binop: LE .

    $default  reduce using rule 23 (binop)


State 30

   24 binop: LT .

    $default  reduce using rule 24 (binop)


State 31

   25 binop: GE .

    $default  reduce using rule 25 (binop)


State 32

   26 binop: GT .

    $default  reduce using rule 26 (binop)


State 33

   27 binop: EQ .

    $default  reduce using rule 27 (binop)


State 34

   28 binop: OR .

    $default  reduce using rule 28 (binop)


State 35

   29 binop: AND .

    $default  reduce using rule 29 (binop)


State 36

   10 expr: BRACKET_L expr binop . expr BRACKET_R

    BRACKET_L  shift, and go to state 11
    TRUEVAL    shift, and go to state 12
    FALSEVAL   shift, and go to state 13
    NUM        shift, and go to state 14
    FLOAT      shift, and go to state 15
    ID         shift, and go to state 16

    expr      go to state 37
    constant  go to state 18
    floatval  go to state 19
    intval    go to state 20
    boolval   go to state 21


State 37

   10 expr: BRACKET_L expr binop expr . BRACKET_R

    BRACKET_R  shift, and go to state 38


State 38

   10 expr: BRACKET_L expr binop expr BRACKET_R .

    $default  reduce using rule 10 (expr)
